--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -5,24 +5,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>TodoApp</title>
 </head>
 <body>
-<h1>Todo Application</h1>
-<div>
-    <form th:action="@{/tasks}" method="post">
-        <div>
-            <input type="text" name="title"placeholder="Add the task" required>
+
+<div class="container">
+    <h1 class="mt-5 text-center">Todo Application</h1>
+    <form class="row mt-5" th:action="@{/tasks}" method="post">
+        <div class="col-md-10">
+            <input type="text" class=" form-control form-control-lg" name="title"placeholder="Add the task" required>
         </div>
-        <div>
-            <button type="submit">Add</button>
+        <div class="row mt-2">
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Add</button>
         </div>
     </form>
-    <th:block th:each="task:${tasks}">
-        <div>
-            <span th:text="${task.title}">Task-title</span>
-        </div>
-    </th:block>
+    <div class="mt-4">
+        <th:block th:each="task:${tasks}">
+            <div class="card mb-2">
+                <div class="card-body d-flex align-items-center justify-content-between">
+                    <span th:text="${task.title}">Task-title</span>
+                </div>
+            </div>
+        </th:block>
+    </div>
 
 </div>
 </body>
