--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -6,17 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+        .text-cross-through{
+        text-decoration:line-through;
+        color:gray
+        }
+    </style>
+
     <title>TodoApp</title>
 </head>
 <body>
 
 <div class="container">
     <h1 class="mt-5 text-center">Todo Application</h1>
-    <form class="row mt-5" th:action="@{/tasks}" method="post">
+    <form class="row mt-3" th:action="@{/tasks}" method="post">
         <div class="col-md-10">
             <input type="text" class=" form-control form-control-lg" name="title"placeholder="Add the task" required>
         </div>
-        <div class="row mt-2">
+        <div class="col mt-2">
             <button class="btn btn-primary btn-lg btn-block" type="submit">Add</button>
         </div>
     </form>
@@ -24,7 +31,11 @@
         <th:block th:each="task:${tasks}">
             <div class="card mb-2">
                 <div class="card-body d-flex align-items-center justify-content-between">
-                    <span th:text="${task.title}">Task-title</span>
+                    <span th:classappend="${task.completed}?'text-cross-through'" th:text="${task.title}">Task-title</span>
+                    <div>
+                        <a th:href="@{/tasks/toggle/{id}(id=${task.id})}" class="btn btn-outline-success btn-sm">Toggle</a>
+                        <a th:href="@{/tasks/delete/{id}(id=${task.id})}" class="btn btn-outline-danger btn-red btn-sm">Delete</a>
+                    </div>
                 </div>
             </div>
         </th:block>
